2-[frontend] : create home page service

--- a/src/app/header-home/header-home.component.scss
+++ b/src/app/header-home/header-home.component.scss
@@ -16,6 +16,7 @@
 	background-size: cover;
 	height: 700px;
   font-family: 'Montserrat'!important;
+	position: relative;
 }
 .title-block{
 	background:
