--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -22,4 +22,5 @@
   <app-mission-home id = "ms"></app-mission-home>
   <app-tarif-view id = "tr"></app-tarif-view>
   <app-service-view id = "sr"></app-service-view>
+  <app-footer-home></app-footer-home>
 </div>
