--- a/src/app/mission-home/mission-home.component.html
+++ b/src/app/mission-home/mission-home.component.html
@@ -4,15 +4,15 @@
       <div class="col-sm-8 mt-5">
         <div class="card box-shadow card-mission">
   		  		<div class="card-body">
-  				    <h4 class="card-title">{{title}}</h4>
+  				    <h4 class="card-title">{{mission.title}}</h4>
   				    <div class="row">
   				    	<div class="col-sm-12 col-lg-7 col-xl-8">
   				    		<div style="width: 100px; border: 1px solid #FFAB00; margin-bottom: 50px;"></div>
   				    		<p class="card-text">
-  						    	{{content}}
+  						    	{{mission.content}}
   							</p>
   							<h6 class="card-subtitle mb-2 text-muted">
-  								<span style="color: #000;">{{author}}</span> {{role}}
+  								<span style="color: #000;">{{mission.author}}</span> {{mission.role}}
   							</h6>
   				    	</div>
   				    	<div class="col-lg-5 col-xl-4 d-none d-sm-none d-md-none d-lg-block">
