--- a/src/app/service-view/service-view.component.html
+++ b/src/app/service-view/service-view.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid mt-5 mb-5 pt-5" style="background-color: #EEEEEE;">
+<div class="container-fluid mt-5 pt-5" style="background-color: #EEEEEE;">
 		<div class="container">
       <h4 class="title">Nos Services</h4>
       <div style="width: 100px; border: 1px solid #FFAB00; margin-bottom: 50px;"></div>
