--- a/src/app/home-page/header-home/header-home.component.scss
+++ b/src/app/home-page/header-home/header-home.component.scss
@@ -11,7 +11,7 @@
       rgba(0,0,0, 0.45)
     ),
     /* bottom, image */
-	url('../../assets/background.jpg');
+	url('../../../assets/background.jpg');
 	background-attachment: fixed;
 	background-size: cover;
 	height: 700px;
@@ -57,4 +57,9 @@ button{
 	font-size: 16px!important;
 	margin-top: 10px;
 	padding: 20px 10!important;
+	transition: background-color 1s ease;
+}
+.btn-search:hover{
+	background-color: #ffc000;
+	box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2), 0px 6px 10px 0px rgba(0,0,0,0.14), 0px 1px 18px 0px rgba(0,0,0,0.12) !important
 }
