--- a/src/app/home-page/tarif/tarif.component.scss
+++ b/src/app/home-page/tarif/tarif.component.scss
@@ -28,4 +28,9 @@
 	font-size: 16px!important;
 	margin-top: 10px;
 	padding: 20px 10!important;
+	transition: background-color 1s ease;
+}
+.btn-search:hover{
+	background-color: #ffc000;
+	box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2), 0px 6px 10px 0px rgba(0,0,0,0.14), 0px 1px 18px 0px rgba(0,0,0,0.12) !important
 }
