4-[frontend] : authentification page and dashboard

--- a/src/app/home-page/tarif/tarif.component.html
+++ b/src/app/home-page/tarif/tarif.component.html
@@ -20,7 +20,7 @@
   								<h3>{{price}} DA/MOIS</h3>
   							</div>
 							</h6>
-							<button type="button" class="btn-lg btn btn-search">
+							<button type="button" class="btn-lg btn btn-search" routerLink="login">
 								Commencer
 								<i class="fas fa-arrow-right fa-lg"></i>
 							</button>
