--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+html,body{
+    min-height: 100vh;
+}
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 0px rgba(0,0, 0, 0.8);
+    border-radius: 3px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 3px;
+    -webkit-box-shadow: inset 0 0 3px rgba(0,0, 0, 0.8);
+    background-color: rgba(0,0, 0, 0.5);
+}
+.a-item:hover{
+  border-left: 4px solid #FFAB00;
+  i{
+    color : #FFAB00;
+  }
+}
