Admin auth added

--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -17,7 +17,7 @@
         <button mat-menu-item class="a-item" href="javascript:void(0)">
           <i class="fas fa-cogs"></i> Paramètres
         </button>
-        <button mat-menu-item class="a-item"  >
+        <button mat-menu-item class="a-item"  (click)="logout()">
           <i class="fa fa-fw fa-power-off"></i>Déconnexion
         </button>
       </mat-menu>
