--- a/src/app/layout/tables/tables.component.html
+++ b/src/app/layout/tables/tables.component.html
@@ -18,7 +18,7 @@
                         <tbody>
                           <tr *ngFor = "let obj of fabricants, let i = index">
                               <th scope="row">{{i+1}}</th>
-                              <td>{{obj.fabricant}}</td>
+                              <td>{{obj.marque}}</td>
                               <td>
                                 <button class="mx-2" mat-flat-button color="warn"   >Supprimer</button>
                                 <button class="mx-2" mat-flat-button color="primary">Modifier</button>
