Add pagination + filtering + delete + confirmation marques features

--- a/src/app/home-page/header-home/header-home.component.html
+++ b/src/app/home-page/header-home/header-home.component.html
@@ -3,7 +3,7 @@
 			<h1 class="h1-1">{{header.title}}</h1>
 			<h6 class="h3-1">{{header.citation}}</h6>
 			<div class="form-group">
-				<button type="button" class="btn-lg btn btn-search" routerLink="login">
+				<button type="button" class="btn-lg btn btn-search" routerLink="dashboard">
 				    Commencer
 			  		<i class="fas fa-arrow-right fa-lg"></i>
 		      	</button>
