--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,6 +3,7 @@
         <div class="col-md-4">
             <img src="assets/images/logo.png" width="150px" class="user-avatar" />
             <h1>SayaraDZ</h1>
+            <app-notification [error] = "error"></app-notification>
             <form (submit)="onSubmit()">
                 <div class="form-content">
                     <div class="form-group">
