--- a/src/app/layout/overview/overview.component.html
+++ b/src/app/layout/overview/overview.component.html
@@ -1,4 +1,4 @@
-<div class="container pt-5" style="margin-top : 50px;">
+<div class="container pt-5" >
     <app-page-header [heading]="infoPage.title" [icon]="infoPage.icon"></app-page-header>
     <div class="row">
         <div class="col-xl-4 col-lg-6" *ngFor = "let stat of infoPage.stats">
