update login page UI and form-fabricant, profile pages UI

--- a/src/app/layout/components/sidebar/sidebar.component.scss
+++ b/src/app/layout/components/sidebar/sidebar.component.scss
@@ -2,6 +2,7 @@ $topnav-background-color: #fff;
 .sidebar {
   overflow-y: auto;
   background-color: $topnav-background-color;
+  width: 250px;
     .list-group {
         width: 100%;
         height: 100%;
