--- a/src/app/layout/profile/profile.component.html
+++ b/src/app/layout/profile/profile.component.html
@@ -1,41 +1,72 @@
 <div class="container pt-5" >
   <app-page-header [heading]="infoPage.title" [icon]="infoPage.icon"></app-page-header>
-  <mat-card class="example-card">
+  <div class="d-flex justify-content-center">
+      <mat-spinner class="mt-5"  [hidden]="!loading"></mat-spinner>
+  </div>
+  <mat-card class="example-card mb-5" [hidden]="loading">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
       <mat-card-title>{{user.name}} {{user.surname}}</mat-card-title>
       <mat-card-subtitle>{{user.post}}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
-      <div class="d-flex flex-column">
-        <mat-form-field>
-          <input [disabled]="modify" matInput placeholder="Nom" [value] = user.name/>
-        </mat-form-field>
+      <form [formGroup]="userFormGroup" (ngSubmit)="onSubmit()">
+        <div class="d-flex flex-column">
+          <h5>Informations personnelles :</h5>
+          <div class="row">
+            <div class="col-sm-6 d-flex flex-column">
+              <mat-form-field>
+                <input matInput placeholder="Nom"  formControlName="username"/>
+              </mat-form-field>
+            </div>
+            <div class="col-sm-6 d-flex flex-column">
+              <mat-form-field>
+                <input matInput placeholder="Prénom" formControlName="usersurname" />
+              </mat-form-field>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-6 d-flex flex-column">
+              <mat-form-field>
+                <input matInput placeholder="Email" type="email" formControlName="email" />
+              </mat-form-field>
+            </div>
+            <div class="col-sm-6 d-flex flex-column">
+              <mat-form-field>
+                <input matInput placeholder="Phone" formControlName="phone" />
+              </mat-form-field>
+            </div>
+          </div>
 
-        <mat-form-field>
-          <input [disabled]="modify" matInput placeholder="Prénom" [value] = "user.surname"/>
-        </mat-form-field>
+          <mat-form-field>
+            <input matInput placeholder="Address" formControlName="address"/>
+          </mat-form-field>
+          <br>
+          <h5>Choisir un mot de passe :</h5>
+          <div class="row">
+            <div class="col-sm-6 d-flex flex-column">
+              <mat-form-field>
+                <input matInput placeholder="Mot de passe" type="password" formControlName="password"/>
+              </mat-form-field>
+            </div>
+            <div class="col-sm-6 d-flex flex-column">
+              <mat-form-field>
+                <input matInput placeholder="Confirmer le mot de passe" type="password" formControlName="confirmPassword"/>
+              </mat-form-field>
+            </div>
+          </div>
+          <br>
 
-        <mat-form-field>
-          <input [disabled]="modify" matInput placeholder="Email" type="email" [value] = "user.email"/>
-        </mat-form-field>
+        </div>
+        <div class="d-flex flex-row-reverse">
+          <button mat-flat-button class = "mx-2 btn-search" (click) = "enableModify()">
+            {{modify === true ? "Modifier" : "Annuler"}}
+            <mat-icon>create</mat-icon>
+          </button>
+          <button [hidden] = modify mat-flat-button color="primary" class="btn-search" type="submit">Enregistrer<mat-icon>save</mat-icon></button>
+        </div>
 
-        <mat-form-field>
-          <input [disabled]="modify" matInput placeholder="Mot de passe" type="password" [value] = user.password/>
-        </mat-form-field>
-
-        <mat-form-field>
-          <input [disabled]="modify" matInput placeholder="Address" [value] = user.address/>
-        </mat-form-field>
-
-        <mat-form-field>
-          <input [disabled]="modify" matInput placeholder="Phone" [value] = user.phone/>
-        </mat-form-field>
-      </div>
+      </form>
     </mat-card-content>
-    <mat-card-actions>
-      <button mat-flat-button class = "mx-2" color="primary" (click) = "enableModify()">Modifier<mat-icon>create</mat-icon></button>
-      <button [hidden] = modify mat-flat-button color="accent" (click) = "enableModify()">Enregistrer<mat-icon>save</mat-icon></button>
-    </mat-card-actions>
   </mat-card>
 </div>
