--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,4 +1,4 @@
-$topnav-background-color: #222;
+$topnav-background-color: #BDBDBD;
 :host {
     display: block;
 }
@@ -10,12 +10,8 @@ $topnav-background-color: #222;
     bottom: 0;
     overflow: auto;
     background: $topnav-background-color;
-    text-align: center;
-    color: #fff;
+    color: #000;
     padding: 3em;
-    .col-lg-4 {
-        padding: 0;
-    }
     .input-lg {
         height: 46px;
         padding: 10px 16px;
@@ -27,19 +23,17 @@ $topnav-background-color: #222;
         background: 0 0;
         border: none;
         box-shadow: none;
-        border-bottom: 2px solid rgba(255, 255, 255, 0.5);
-        color: #fff;
+        border-bottom: 2px solid rgba(0, 0, 0, 0.5);
+        color: #000;
         border-radius: 0;
     }
     .input-underline:focus {
-        border-bottom: 2px solid #fff;
+        border-bottom: 2px solid #000;
         box-shadow: none;
     }
     .rounded-btn {
-        -webkit-border-radius: 50px;
-        border-radius: 50px;
         color: rgba(255, 255, 255, 0.8);
-        background: $topnav-background-color;
+        background: #FFAB00;
         border: 2px solid rgba(255, 255, 255, 0.8);
         font-size: 18px;
         line-height: 40px;
@@ -60,36 +54,35 @@ $topnav-background-color: #222;
         margin-bottom: 10px;
         font-size: 36px;
         small {
-            color: rgba(255, 255, 255, 0.7);
+            color: rgba(0, 0, 0, 0.7);
         }
     }
 
     .form-group {
         padding: 8px 0;
         input::-webkit-input-placeholder {
-            color: rgba(255, 255, 255, 0.6) !important;
+            color: rgba(0, 0, 0, 0.6) !important;
         }
 
         input:-moz-placeholder {
             /* Firefox 18- */
-            color: rgba(255, 255, 255, 0.6) !important;
+            color: rgba(0, 0, 0, 0.6) !important;
         }
 
         input::-moz-placeholder {
             /* Firefox 19+ */
-            color: rgba(255, 255, 255, 0.6) !important;
+            color: rgba(0, 0, 0, 0.6) !important;
         }
 
         input:-ms-input-placeholder {
-            color: rgba(255, 255, 255, 0.6) !important;
+            color: rgba(0, 0, 0, 0.6) !important;
         }
     }
     .form-content {
         padding: 40px 0;
     }
-    .user-avatar {
-        -webkit-border-radius: 50%;
-        border-radius: 50%;
-        border: 2px solid #fff;
-    }
+}
+.box-shadow{
+  border-radius: 0px;
+	box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2), 0px 6px 10px 0px rgba(0,0,0,0.14), 0px 1px 18px 0px rgba(0,0,0,0.12) !important;
 }
