--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,11 +9,11 @@ html,body{
 
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 0px rgba(0,0, 0, 0.8);
-    border-radius: 3px;
+    border-radius: 0px;
 }
 
 ::-webkit-scrollbar-thumb {
-    border-radius: 3px;
+    border-radius: 0px;
     -webkit-box-shadow: inset 0 0 3px rgba(0,0, 0, 0.8);
     background-color: rgba(0,0, 0, 0.5);
 }
@@ -22,4 +22,17 @@ html,body{
   i{
     color : #FFAB00;
   }
+}
+.btn-search{
+  border-radius: 0 !important;
+	background-color: #FFAB00;
+	color: #fff;
+	font-size: 16px!important;
+	margin-top: 10px;
+	padding: 20px 10!important;
+	transition: background-color 1s ease;
+}
+.btn-search:hover{
+	background-color: #ffc000;
+	box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2), 0px 6px 10px 0px rgba(0,0,0,0.14), 0px 1px 18px 0px rgba(0,0,0,0.12) !important
 }
