feature : list-user-fabricants page

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -22,7 +22,7 @@
                                 <input type="password" [(ngModel)]="password" [ngModelOptions]="{standalone: true}" class="form-control input-underline input-lg" placeholder="Password">
                             </div>
                         </div>
-                        <button class="btn rounded-btn" type="submit">Connect</button>
+                        <button class="btn btn-search" type="submit">Connect</button>
                     </form>
                   </div>
                 </div>
