--- a/src/app/layout/profile/profile.component.html
+++ b/src/app/layout/profile/profile.component.html
@@ -3,70 +3,85 @@
   <div class="d-flex justify-content-center">
       <mat-spinner class="mt-5"  [hidden]="!loading"></mat-spinner>
   </div>
-  <mat-card class="example-card mb-5" [hidden]="loading">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>{{user.name}} {{user.surname}}</mat-card-title>
-      <mat-card-subtitle>{{user.post}}</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content>
-      <form [formGroup]="userFormGroup" (ngSubmit)="onSubmit()">
-        <div class="d-flex flex-column">
-          <h5>Informations personnelles :</h5>
-          <div class="row">
-            <div class="col-sm-6 d-flex flex-column">
-              <mat-form-field>
-                <input matInput placeholder="Nom"  formControlName="username"/>
-              </mat-form-field>
+  <div class="" [hidden]="loading">
+    <app-notification [error] = "error"></app-notification>
+    <mat-card class="example-card mb-5" >
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>{{user.email}}</mat-card-title>
+        <mat-card-subtitle>{{user.type}}</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+        <form [formGroup]="userFormGroup" (ngSubmit)="onSubmit()">
+          <div class="d-flex flex-column">
+            <h5>Informations personnelles :</h5>
+            <div class="row">
+              <div class="col-sm-6 d-flex flex-column">
+                <mat-form-field>
+                  <input matInput placeholder="Nom"  formControlName="username"/>
+                </mat-form-field>
+              </div>
+              <div class="col-sm-6 d-flex flex-column">
+                <mat-form-field>
+                  <input matInput placeholder="Prénom" formControlName="usersurname" />
+                </mat-form-field>
+              </div>
             </div>
-            <div class="col-sm-6 d-flex flex-column">
-              <mat-form-field>
-                <input matInput placeholder="Prénom" formControlName="usersurname" />
-              </mat-form-field>
+            <div class="row">
+              <div class="col-sm-6 d-flex flex-column">
+                <mat-form-field>
+                  <input matInput placeholder="Email" type="email" formControlName="email" [value] = user.email />
+                  <mat-error *ngFor="let validation of account_validation_messages.email">
+                  	<mat-error class="error-message" *ngIf="userFormGroup.get('email').hasError(validation.type) && (userFormGroup.get('email').dirty || userFormGroup.get('email').touched)">{{validation.message}}
+                  	</mat-error>
+                  </mat-error>
+                </mat-form-field>
+              </div>
+              <div class="col-sm-6 d-flex flex-column">
+                <mat-form-field>
+                  <input matInput placeholder="Phone" formControlName="phone" />
+                </mat-form-field>
+              </div>
             </div>
+
+            <mat-form-field>
+              <input matInput placeholder="Address" formControlName="address"/>
+            </mat-form-field>
+            <br>
+            <h5>Choisir un mot de passe :</h5>
+            <div class="row" [formGroup] = "matching_passwords">
+              <div class="col-sm-6 d-flex flex-column">
+                <mat-form-field>
+                  <input matInput placeholder="Mot de passe" type="password" formControlName="password"/>
+                  <mat-error *ngFor="let validation of account_validation_messages.password">
+                  	<mat-error class="error-message" *ngIf="matching_passwords.get('password').hasError(validation.type) && (matching_passwords.get('password').dirty || matching_passwords.get('password').touched)">{{validation.message}}
+                  	</mat-error>
+                  </mat-error>
+                </mat-form-field>
+              </div>
+              <div class="col-sm-6 d-flex flex-column">
+                <mat-form-field>
+                  <input matInput placeholder="Confirmer le mot de passe" type="password" formControlName="confirmPassword"/>
+                  <mat-error *ngFor="let validation of account_validation_messages.confirm_password">
+                    <mat-error class="error-message" *ngIf="matching_passwords.get('confirmPassword').hasError(validation.type) && (matching_passwords.get('confirmPassword').dirty || matching_passwords.get('confirmPassword').touched)">{{validation.message}}</mat-error>
+                  </mat-error>
+                </mat-form-field>
+                <p class="error-message mat-error mat-form-field-subscript-wrapper mat-form-field" *ngIf="matching_passwords.errors?.areEqual">Password does not match</p>
+              </div>
+            </div>
+            <br>
+
           </div>
-          <div class="row">
-            <div class="col-sm-6 d-flex flex-column">
-              <mat-form-field>
-                <input matInput placeholder="Email" type="email" formControlName="email" />
-              </mat-form-field>
-            </div>
-            <div class="col-sm-6 d-flex flex-column">
-              <mat-form-field>
-                <input matInput placeholder="Phone" formControlName="phone" />
-              </mat-form-field>
-            </div>
+          <div class="d-flex flex-row-reverse">
+            <button mat-flat-button class = "mx-2 btn-search" (click) = "enableModify()">
+              {{modify === true ? "Modifier" : "Annuler"}}
+              <mat-icon>create</mat-icon>
+            </button>
+            <button [hidden] = modify mat-flat-button color="primary" class="btn-search" type="submit">Enregistrer<mat-icon>save</mat-icon></button>
           </div>
 
-          <mat-form-field>
-            <input matInput placeholder="Address" formControlName="address"/>
-          </mat-form-field>
-          <br>
-          <h5>Choisir un mot de passe :</h5>
-          <div class="row">
-            <div class="col-sm-6 d-flex flex-column">
-              <mat-form-field>
-                <input matInput placeholder="Mot de passe" type="password" formControlName="password"/>
-              </mat-form-field>
-            </div>
-            <div class="col-sm-6 d-flex flex-column">
-              <mat-form-field>
-                <input matInput placeholder="Confirmer le mot de passe" type="password" formControlName="confirmPassword"/>
-              </mat-form-field>
-            </div>
-          </div>
-          <br>
-
-        </div>
-        <div class="d-flex flex-row-reverse">
-          <button mat-flat-button class = "mx-2 btn-search" (click) = "enableModify()">
-            {{modify === true ? "Modifier" : "Annuler"}}
-            <mat-icon>create</mat-icon>
-          </button>
-          <button [hidden] = modify mat-flat-button color="primary" class="btn-search" type="submit">Enregistrer<mat-icon>save</mat-icon></button>
-        </div>
-
-      </form>
-    </mat-card-content>
-  </mat-card>
+        </form>
+      </mat-card-content>
+    </mat-card>
+  </div>
 </div>
