--- a/src/app/layout/form-fabricant/form-fabricant.component.html
+++ b/src/app/layout/form-fabricant/form-fabricant.component.html
@@ -1,6 +1,9 @@
 <div class="container pt-5">
     <app-page-header [heading]="'Créer Fabricant'" [icon]="'fa-plus'"></app-page-header>
-    <div class="row">
+    <div class="d-flex justify-content-center">
+        <mat-spinner class="mt-5"  [hidden]="!loading"></mat-spinner>
+    </div>
+    <div class="row" [hidden]="loading">
         <div class="col-lg-12">
           <app-notification class="ma-2" [error] = "error"></app-notification>
           <mat-horizontal-stepper linear="false" #stepper>
