--- a/src/app/layout/list-fabricants/list-fabricants.component.html
+++ b/src/app/layout/list-fabricants/list-fabricants.component.html
@@ -22,17 +22,22 @@
 
                       <ng-container matColumnDef="marque">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Marque </th>
-                        <td mat-cell *matCellDef="let element"> {{element.marque}} </td>
-                      </ng-container>
-
-                      <ng-container matColumnDef="addresse">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Addresse </th>
-                        <td mat-cell *matCellDef="let element"> {{element.addresse}} </td>
+                        <td mat-cell *matCellDef="let element"> {{element.brand}} </td>
                       </ng-container>
 
                       <ng-container matColumnDef="logo">
                         <th mat-header-cell *matHeaderCellDef> Logo </th>
                         <td mat-cell *matCellDef="let element"> {{element.logo}} </td>
+                      </ng-container>
+
+                      <ng-container matColumnDef="createdAt">
+                        <th mat-header-cell *matHeaderCellDef> Date de création </th>
+                        <td mat-cell *matCellDef="let element"> {{element.createdAt | date :  "short" }} </td>
+                      </ng-container>
+
+                      <ng-container matColumnDef="updatedAt">
+                        <th mat-header-cell *matHeaderCellDef> Date de mise à jours </th>
+                        <td mat-cell *matCellDef="let element"> {{element.updatedAt | date :  "short" }} </td>
                       </ng-container>
 
                       <ng-container matColumnDef="manipulations">
@@ -41,7 +46,7 @@
                           <button class="mx-2" mat-flat-button  (click) = "onDelete(element.id)">
                             <mat-icon>delete</mat-icon>
                           </button>
-                          <button class="mx-2" mat-flat-button (click) = "onUpdate(element.id)">
+                          <button class="mx-2" mat-flat-button (click) = "onUpdate(element)">
                             <mat-icon>create</mat-icon>
                           </button>
                         </td>
