add model classes for fabricant and admin + using environement.ts file for sharing base url

--- a/src/app/layout/form-user/form-user.component.html
+++ b/src/app/layout/form-user/form-user.component.html
@@ -56,7 +56,7 @@
             <mat-select placeholder="Fabricant" formControlName="fabricant" required>
               <mat-option>--</mat-option>
               <mat-option *ngFor="let fabricant of fabricants" [value]="fabricant">
-                {{fabricant.marque}}
+                {{fabricant.brand}}
               </mat-option>
             </mat-select>
           </mat-form-field>
