add : list-user-fabricants pages(page for all brands, page for users, card item for user and dialog for update) + loginpage for admin (find route in app-routing) + access denied page

--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <nav class="sidebar">
     <div class="list-group" id="accordion">
       <mat-accordion>
-        <mat-expansion-panel *ngFor= "let link of links">
+        <mat-expansion-panel *ngFor= "let link of links" [hidden]="link.hidden">
           <mat-expansion-panel-header  class="a-item">
                 <i [className]=link.icon></i>&nbsp;
                 <span>{{link.header}}</span>
