--- a/src/app/layout/profile/profile.component.html
+++ b/src/app/layout/profile/profile.component.html
@@ -8,7 +8,7 @@
     <mat-card class="example-card mb-5" >
       <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>{{user.email}}</mat-card-title>
+        <mat-card-title>{{user.firstName}} {{user.lastName}}</mat-card-title>
         <mat-card-subtitle>{{user.type}}</mat-card-subtitle>
       </mat-card-header>
       <mat-card-content>
@@ -18,12 +18,12 @@
             <div class="row">
               <div class="col-sm-6 d-flex flex-column">
                 <mat-form-field>
-                  <input matInput placeholder="Nom"  formControlName="username"/>
+                  <input matInput placeholder="Nom"  formControlName="username" [value]=user.firstName/>
                 </mat-form-field>
               </div>
               <div class="col-sm-6 d-flex flex-column">
                 <mat-form-field>
-                  <input matInput placeholder="Prénom" formControlName="usersurname" />
+                  <input matInput placeholder="Prénom" formControlName="usersurname" [value]=user.lastName/>
                 </mat-form-field>
               </div>
             </div>
@@ -39,13 +39,13 @@
               </div>
               <div class="col-sm-6 d-flex flex-column">
                 <mat-form-field>
-                  <input matInput placeholder="Phone" formControlName="phone" />
+                  <input matInput placeholder="Phone" formControlName="phone" [value]=user.phone />
                 </mat-form-field>
               </div>
             </div>
 
             <mat-form-field>
-              <input matInput placeholder="Address" formControlName="address"/>
+              <input matInput placeholder="Address" formControlName="address" [value]=user.address />
             </mat-form-field>
             <br>
             <h5>Choisir un mot de passe :</h5>
@@ -73,11 +73,7 @@
 
           </div>
           <div class="d-flex flex-row-reverse">
-            <button mat-flat-button class = "mx-2 btn-search" (click) = "enableModify()">
-              {{modify === true ? "Modifier" : "Annuler"}}
-              <mat-icon>create</mat-icon>
-            </button>
-            <button [hidden] = modify mat-flat-button color="primary" class="btn-search" type="submit">Enregistrer<mat-icon>save</mat-icon></button>
+            <button mat-flat-button color="primary" class="btn-search" type="submit">Enregistrer<mat-icon>save</mat-icon></button>
           </div>
 
         </form>
