--- a/src/app/layout/form-user/form-user.component.html
+++ b/src/app/layout/form-user/form-user.component.html
@@ -69,7 +69,7 @@
           <h5>Informations générales :</h5>
           <mat-form-field>
 
-            <input matInput placeholder="Fabricant" type="text" formControlName="fabricant" [value]=fabricant.brand />
+            <!-- <input matInput placeholder="Fabricant" type="text" formControlName="fabricant" [value]=fabricant.brand /> -->
 
             <mat-select placeholder="Fabricant" formControlName="fabricant" required>
               <mat-option>--</mat-option>
@@ -77,7 +77,7 @@
                 {{fabricant.brand}}
               </mat-option>
             </mat-select>
-            //hnheainfzojefno
+            
           </mat-form-field>
         </div>
         <div class="d-flex flex-row-reverse">
