finish the administration part

--- a/src/app/layout/list-user-fabricants/update-user-fabricant-dialog/update-user-fabricant-dialog.component.html
+++ b/src/app/layout/list-user-fabricants/update-user-fabricant-dialog/update-user-fabricant-dialog.component.html
@@ -7,12 +7,12 @@
           <div class="row">
             <div class="col-sm-6 d-flex flex-column">
               <mat-form-field>
-                <input matInput placeholder="Nom"  formControlName="username" [value]=user.firstName/>
+                <input matInput placeholder="Nom"  formControlName="lastName" [value]=user.lastName/>
               </mat-form-field>
             </div>
             <div class="col-sm-6 d-flex flex-column">
               <mat-form-field>
-                <input matInput placeholder="Prénom" formControlName="usersurname" [value]=user.lastName/>
+                <input matInput placeholder="Prénom" formControlName="firstName" [value]=user.firstName/>
               </mat-form-field>
             </div>
           </div>
