--- a/src/app/layout/list-user-fabricants/display-card-user/display-card-user.component.html
+++ b/src/app/layout/list-user-fabricants/display-card-user/display-card-user.component.html
@@ -15,10 +15,10 @@
     <mat-card-subtitle>{{user.address}}</mat-card-subtitle>
   </mat-card-content>
   <mat-card-actions>
-    <button class="mr-2" mat-flat-button (click)="onDelete(user.id)">
+    <button class="mr-2" mat-flat-button (click)="onDelete(user.manufacturer,user.id)">
       <mat-icon>delete</mat-icon>
     </button>
-    <button class="mx-2" mat-flat-button (click)="onUpdate(user.id)">
+    <button class="mx-2" mat-flat-button (click)="onUpdate(user.manufacturer,user.id)">
       <mat-icon>create</mat-icon>
     </button>
     <mat-slide-toggle
