--- a/src/app/layout/form-fabricant/form-fabricant.component.html
+++ b/src/app/layout/form-fabricant/form-fabricant.component.html
@@ -40,7 +40,7 @@
                                 required
                                 style="display : none">
                           </fieldset>
-                          <button mat-raised-button (click) = "addFiles()">Choisir un logo du fabricant</button>
+                          <button mat-raised-button color="primary" (click) = "addFiles()">Choisir un logo du fabricant</button>
                         </div>
                         <div class="col-sm-6 d-flex flex-column">
                           <fieldset class="form-group">
