--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -6,7 +6,7 @@
       <app-header [loading] = loading></app-header>
   </mat-toolbar>
   <mat-sidenav-container class="example-container" fullscreen>
-    <mat-sidenav #snav>
+    <mat-sidenav #snav opened="true">
         <app-sidebar></app-sidebar>
     </mat-sidenav>
     <mat-sidenav-content>
