--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -1,5 +1,12 @@
 <nav class="sidebar">
     <div class="list-group" id="accordion">
+      <mat-card class="example-card">
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title>{{fullName}}</mat-card-title>
+          <mat-card-subtitle>{{type}}</mat-card-subtitle>
+        </mat-card-header>
+      </mat-card>
       <mat-accordion>
         <mat-expansion-panel *ngFor= "let link of links" [hidden]="link.hidden">
           <mat-expansion-panel-header  class="a-item">
